fix gap

--- a/assets/css/timeline.css
+++ b/assets/css/timeline.css
@@ -14,7 +14,7 @@
 
 .timeline-item {
   width: 100%;
-  margin-bottom: 0px;
+  margin-bottom: 50px;
 }
 .timeline-item:nth-child(even) .timeline-content {
   float: right;
